Attemped to fix form alignment on contact page.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,12 @@
 .contact {
 	color: black;
 }
+.contact .container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+	display: inline-block;
+}
 
 .contact h1 {
 	font-style: normal;
